<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.nammamela.app.ui.splash.SplashFragment"
        android:label="@string/app_name" />

    <fragment
        android:id="@+id/authFragment"
        android:name="com.nammamela.app.ui.auth.AuthFragment"
        android:label="@string/authentication" />

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.nammamela.app.ui.main.DashboardFragment"
        android:label="@string/dashboard" />

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.nammamela.app.ui.home.HomeFragment"
        android:label="@string/home" />

    <fragment
        android:id="@+id/bookingFragment"
        android:name="com.nammamela.app.ui.booking.BookingFragment"
        android:label="@string/booking" />

    <fragment
        android:id="@+id/fanWallFragment"
        android:name="com.nammamela.app.ui.fanwall.FanWallFragment"
        android:label="@string/fan_wall" />

    <fragment
        android:id="@+id/adminLoginFragment"
        android:name="com.nammamela.app.ui.admin.AdminLoginFragment"
        android:label="@string/admin_login" />

    <fragment
        android:id="@+id/adminDashboardFragment"
        android:name="com.nammamela.app.ui.admin.AdminDashboardFragment"
        android:label="@string/admin_dashboard" />

    <fragment
        android:id="@+id/managePlayFragment"
        android:name="com.nammamela.app.ui.admin.manageplay.ManagePlayFragment"
        android:label="@string/manage_play" />

    <fragment
        android:id="@+id/manageCastFragment"
        android:name="com.nammamela.app.ui.admin.cast.ManageCastFragment"
        android:label="@string/manage_cast" />

    <fragment
        android:id="@+id/resetSeatsFragment"
        android:name="com.nammamela.app.ui.admin.reset.ResetSeatsFragment"
        android:label="@string/reset_seats" />
</navigation>
